--- a/src/app/features/dashboard/notes-component/notes/notes.component.html
+++ b/src/app/features/dashboard/notes-component/notes/notes.component.html
@@ -1,1 +1,6 @@
-<p>notes component works!</p>
+<header class="notes-header">
+    <p class="notes-header__title">Notes</p>
+</header>
+<main class="notes-main">
+    <app-note *ngFor="let note of notes$ | async" [note]="note"></app-note>
+</main>
