feat(snackbar): add panelClass option
- Added panelClass parameter to open() method.
- Allows customization of snackbar styles.
- Created default-snackbar style in styles.scss.
- Uses custom color variables.
- Improves snackbar styling flexibility.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,14 @@ html,
 body {
     height: 100%;
 }
+
+.default-snackbar {
+    background-color: var(--primary-color);
+    border-color: var(--border-color);
+    color: var(--primary-text-color);
+
+    span {
+        background-color: var(--primary-color);
+        border-color: var(--border-color);
+    }
+}
