--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -10,7 +10,9 @@
         <input type="password" name="password" id="password" placeholder="Password" class="login-form__input"
             formControlName="formPassword">
 
-        <p class="login-form__error" *ngIf="errorMessage">{{errorMessage}}</p>
+        @if (errorMessage){
+        <p class="login-form__error">{{errorMessage}}</p>
+        }
         <button type="submit" class="login-form__button">Login</button>
         <button type="button" class="login-register__button" routerLink="/registration">Register</button>
     </form>
