--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -1,10 +1,8 @@
 @use '../../../shared/styles/extends.scss';
+@use '../../../shared/styles/mixins.scss';
 
 .login {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    @include mixins.flex(column, center, center);
     height: 100vh;
 
     &-form {
