style(dashboard): improve component styles
- Added shared styles
- Improved button styles
- Fixed layout issues
- Added max-height to notes
- Improved error handling in chat

--- a/src/app/features/dashboard/chat/chat.component.html
+++ b/src/app/features/dashboard/chat/chat.component.html
@@ -16,9 +16,11 @@
 
     <form class="chat-footer" [formGroup]="form" (submit)="sendMessage()">
         <fieldset class="chat-footer__field">
-            <legend class="chat-footer__error" *ngIf="messageError">
+            @if(messageError) {
+            <legend class="chat-footer__error">
                 {{messageError}}
             </legend>
+            }
             <textarea type="text" name="chat input" id="chat input" placeholder="chat input" class="chat-footer__input"
                 [formControl]="chatInput"></textarea>
         </fieldset>
