--- a/src/app/features/dashboard/notes-component/note/note.component.scss
+++ b/src/app/features/dashboard/notes-component/note/note.component.scss
@@ -1,3 +1,5 @@
+@use "../../../../shared/styles/extends.scss";
+
 .notes {
     &__note {
         font-size: 0.75rem;
@@ -18,6 +20,7 @@
     }
 
     &__button {
+        @extend %button;
         margin: 5px;
         margin-left: 0;
         padding: 10px;
