--- a/src/app/features/auth/registration/registration.component.scss
+++ b/src/app/features/auth/registration/registration.component.scss
@@ -6,12 +6,7 @@
     height: 100vh;
 
     &-form {
-        gap: 10px;
-        background-color: var(--secondary-color);
-        border-radius: 20px;
-        padding: 20px;
-        max-width: 500px;
-        width: 100%;
+        @extend %form-login-register;
 
         &__title {
             margin-top: 20px;
@@ -19,11 +14,7 @@
         }
 
         &__input {
-            display: block;
-            border: 1px solid var(--border-color);
-            border-radius: 10px;
-            padding: 10px;
-            width: 100%;
+            @include mixins.input();
             margin: 15px 0;
         }
 
@@ -32,23 +23,18 @@
         }
 
         &__error {
-            color: var(--error-color);
-            text-align: center;
-            font-size: 0.75rem;
+            @extend %error;
         }
     }
 
-    &-register__button,
     &-login__button {
         width: clamp(100px, 20%, 200px);
     }
 
-    &-register__button,
     &-login__button,
     &-form__button {
         @extend %button;
-        margin: 20px auto;
         display: block;
-        position: relative;
+        margin: 20px auto;
     }
 }
